# razer-cli

./: Cargo.toml  LICENSE  README.md  flake.nix  test.txt
nix/: package.nix
src/: main.rs
