[package]
name = "razer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
udev = "0.9.1"
